# gg_namecard_gen

./: .gitignore  240608152606560723.json  240727084412600883.json  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
