[package]
name = "gg_namecard_gen"
version = "0.1.1"
edition = "2024"
authors =["meipeter"]
readme = "README.md"
repository = "https://github.com/meipeter/gg_namecard_gen"
license = "MIT"
categories = ["multimedia::images"]
description = "genarate ggst namecard form puddlefarm "
[dependencies]
ab_glyph = "0.2.31"
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
image = "0.25.6"
imageproc = "0.25.0"
puddle-farm-api-client_openapi_client = "1.0.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt"] }
